Fixed contact info and footer text overflow - Edited the private css file to change font size when viewport window meets a minimum threshold

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -52,6 +52,46 @@
   height: 150px;
 }
 
+/* If the screen size is 381px wide or more, set the font-size of <div> to 80px */
+@media screen and (min-width: 381px) {
+  .lead {
+    font-size: 14px;
+  }
+  #members {
+    font-size: 14px;
+  }
+  .footer {
+    font-size: 14px;
+  }
+}
+
+/* If the screen size is 380px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 380px) {
+  .lead {
+    font-size: 12px;
+  }
+  #members {
+    font-size: 12px;
+  }
+  .footer {
+    font-size: 10px;
+  }
+}
+
+/* If the screen size is 381px wide or more, set the font-size of <div> to 80px */
+@media screen and (min-width: 501px) {
+  .footer {
+    font-size: 14px;
+  }
+}
+
+/* If the screen size is 380px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 500px) {
+  .footer {
+    font-size: 10px;
+  }
+}
+
 .cu-contact-info {
   margin-bottom: 0px !important; /* overwrite default CU style */
 }
